--- a/src/style.styl
+++ b/src/style.styl
@@ -37,8 +37,7 @@ $color_error      = #d01414
 
 
 .notification
-  min-width 200px
-  max-width 360px
+  width: 300px
   background-color #fff
   position relative
   opacity 0
