--- a/example/src/App.css
+++ b/example/src/App.css
@@ -1,9 +1,7 @@
 .wrapper {
   width: 100%;
   height: 100%;
-  background-image: url(./images/bg.jpg);
-  background-position: center;
-  background-size: cover;
+  background-color: #5e9cf9;
   position: absolute;
   top: 0;
   left: 0;
